--- a/desafios/d014/tabela.html
+++ b/desafios/d014/tabela.html
@@ -31,19 +31,19 @@
   <table>
     <thead>
       <tr class="rowgray">
-        <th rowspan="2">Área</th>
-        <th rowspan="2">Disciplinas</th>
-        <th colspan="2">Notas</th>
-        <th rowspan="2">Média</th>
+        <th rowspan="2" scope="col">Área</th>
+        <th rowspan="2" scope="col">Disciplinas</th>
+        <th colspan="2" scope="colgroup">Notas</th>
+        <th rowspan="2" scope="col">Média</th>
       </tr>
       <tr class="rowgray">
-        <th>Nota 1</th>
-        <th>Nota 2</th>
+        <th scope="col">Nota 1</th>
+        <th scope="col">Nota 2</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <th rowspan="4">Exatas</th>
+        <th rowspan="4" scope="rowgroup">Exatas</th>
         <td>Matemática</td>
         <td>0.0</td>
         <td>0.0</td>
@@ -68,11 +68,11 @@
         <td>0.0</td>
       </tr>
       <tr class="rowgray">
-        <th class="textleft" colspan="4">Média de Exatas</th>
+        <th class="textleft" colspan="4" scope="row">Média de Exatas</th>
         <td>0.0</td>
       </tr>
       <tr>
-        <th rowspan="2">Humanas</th>
+        <th rowspan="2" scope="rowgroup">Humanas</th>
         <td>História</td>
         <td>0.0</td>
         <td>0.0</td>
@@ -85,7 +85,7 @@
         <td>0.0</td>
       </tr>
       <tr class="rowgray">
-        <th class="textleft" colspan="4">Média de Humanas</th>
+        <th class="textleft" colspan="4" scope="row">Média de Humanas</th>
         <td>0.0</td>
       </tr>
     </tbody>
